--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <kotlin.version>1.9.22</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
         <kotlinx.html.version>0.11.0</kotlinx.html.version>
-        <ksoup.html.version>0.3.1</ksoup.html.version>
+        <ksoup.html.version>0.3.0</ksoup.html.version>
         <ktor.version>2.3.8</ktor.version>
         <logback.version>1.5.0</logback.version>
         <main.class>org.demo.ApplicationKt</main.class>
@@ -52,14 +53,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.2</version>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
@@ -74,19 +67,12 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
-            <version>1.9.22</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.0</version>
-            <scope>test</scope>
+            <version>${kotlin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>1.9.22</version>
+            <version>${kotlin.version}</version>
         </dependency>
 
         <dependency>
@@ -96,7 +82,7 @@
         </dependency>
         <dependency>
             <groupId>com.mohamedrejeb.ksoup</groupId>
-            <artifactId>ksoup-html</artifactId>
+            <artifactId>ksoup-html-jvm</artifactId>
             <version>${ksoup.html.version}</version>
         </dependency>
         <dependency>
@@ -119,6 +105,7 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+
     </dependencies>
 
 </project>
